--- a/doc/references.bib
+++ b/doc/references.bib
@@ -8,6 +8,15 @@
   url={https://nlp.stanford.edu/IR-book/}
 }
 
+@inproceedings{schuster2012japanese,
+  title={Japanese and korean voice search},
+  author={Schuster, Mike and Nakajima, Kaisuke},
+  booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={5149--5152},
+  year={2012},
+  organization={IEEE}
+}
+
 @article{mikolov2013efficient,
   title={Efficient estimation of word representations in vector space},
   author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
@@ -84,6 +93,22 @@
     url = "https://www.aclweb.org/anthology/P18-1007",
     doi = "10.18653/v1/P18-1007",
     pages = "66--75"
+}
+
+@article{kudo2018sentencepiece,
+  title={Sentencepiece: A simple and language independent subword tokenizer and detokenizer for neural text processing},
+  author={Kudo, Taku and Richardson, John},
+  journal={arXiv preprint arXiv:1808.06226},
+  year={2018}
+}
+
+@misc{devlin2018bert,
+    title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+    author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+    year={2018},
+    eprint={1810.04805},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
 }
 
 @misc{provilkov2019bpedropout,
