--- a/doc/sections/titlepage.tex
+++ b/doc/sections/titlepage.tex
@@ -7,9 +7,10 @@
 \begin{titlepage}
 	\begin{center}
 		\normalsize
-		Ludwig-Maximiliams-Universität München \\
+		M.Sc. Computerlinguistik \\
 		Center for information and language processing (CIS)  \\
 		Faculty of language and literature sciences \\
+		Ludwig-Maximiliams-Universität München \\
 		\vspace{1cm} % vertical space
 		\huge
 		Master thesis \\
@@ -17,19 +18,20 @@
 		\includegraphics[width=12cm]{figures/lmu_logo.png} \\ % insert the university logo
 		\vspace{1cm}
 		\Large
-		This is the unknown title \\
+		This is the still unknown title \\
 		of my master thesis \\
+		{\Large\scshape Ane Berasategi \par}
+		\normalsize
+		{Matriculation number: 12006250 \par}
+		\vfill
+		\vspace{1.5cm}
+		{\scshape Supervisor: Masoud Jalil Sabet \par}
+		{\scshape Supervisor: Prof Dr.Hinrich Schütze \par}
+		{Submitted on: never \par} %\today
 		\vspace{1cm}
-		\tiny Version 0, 9 June 2020
+		\tiny Version 1, 25 June 2020
 	\end{center}
-	\normalsize
 	\vfill % variable vertical space
-	\begin{labeling}{submitted: }
-		\item[submitted:] \today
-		\item[by:] Ane Berasategi
-		\item[supervisor:] Masoud Jalil Sabet
-		\item[supervisor:] Hinrich Schütze
-	\end{labeling}
 \end{titlepage}
 
 % end of file
